# pixlvault

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  FRONTEND_TODO.txt  MANIFEST.in  README.md  TODO.txt  features.md  pyproject.toml  requirements.txt  server.py  setup.py  tasksystem.md  todo_events.txt  windows-installer.yml
.github/workflows/: ci.yml  docker-publish.yml  pages.yml  windows-installer.yml
comfyui-workflows/: Flux2-Klein-Image-Edit.json
docs/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.template.html  App.vue  main.js  style.css
frontend/src/components/: CharacterEditor.vue  ChatWindow.vue  ComfyUiRunner.vue  GooglePhotosImportDialog.vue  ImageGrid.vue  ImageImporter.vue  ImageOverlay.vue  PhotosImportDialog.vue  PictureSetEditor.vue  PluginParametersUI.vue  ProgressOverlay.vue  SearchBar.vue  SearchOverlay.vue  SelectionBar.vue  SideBar.vue  TaskManager.vue  Toolbar.vue  UserSettingsDialog.vue
frontend/src/composables/: useOverlayActions.js
frontend/src/utils/: apiClient.js  media.js  stack.js  tags.js  useSearchOverlay.js  utils.js
installer/windows/: PixlVault.iss  Start-PixlVault-Server.bat  install-pixlvault.ps1
metrics/: history.json
migrations/versions/: 0123abcd4567_add_user_max_vram_gb.py  0a1b2c3d4e5f_add_user_comfyui_url.py  ff5a6b7c8d9e_add_user_keep_models_in_memory.py
pictures/: scores.txt
pixelurgy_vault/: TODO.txt  app.py  character.py  characters.py  cli.py  database.py  logging.py  picture.py  picture_iteration.py  picture_iterations.py  picture_tagger.py  picture_utils.py  pictures.py  schema_version.py  server.py  tag_naturaliser.py  vault.py  vault_upgrade.py
pixlstash/: alembic.ini  auth.py  picture_scoring.py  picture_tagger.py  server.py  task_runner.py
pixlstash/data/comfyui-workflows/built-in/: Flux2-Klein-t2i.json
pixlstash/db_models/: picture.py  quality.py
pixlstash/image_plugins/: base.py  service.py
pixlstash/image_plugins/built-in/: rotate.py  scaling.py
pixlstash/migrations/: env.py
pixlstash/migrations/versions/: 0001_baseline.py  0002_add_text_score.py
pixlstash/routes/: characters.py  comfyui.py  config.py  picture_sets.py  pictures.py  stacks.py  tags.py
pixlstash/tasks/: face_extraction_task.py  missing_likeness_parameters_finder.py  missing_quality_finder.py  quality_task.py  tag_task.py
pixlstash/utils/image_processing/: image_utils.py  video_utils.py
pixlstash/utils/quality/: __init__.py  quality_utils.py  smart_score_utils.py
pixlstash/utils/service/: __init__.py  caption_utils.py  config_utils.py  serialization_utils.py  system_utils.py
pixlstash/utils/stack/: __init__.py  stack_utils.py
pixlvault/: TODO.txt  app.py  auth.py  database.py  event_types.py  face_character_likeness_worker.py  face_extraction_worker.py  face_likeness_worker.py  feature_extraction_worker.py  image_embedding_worker.py  image_loading_dataset_prepper.py  likeness_parameter_worker.py  likeness_worker.py  picture_likeness_parameter_utils.py  picture_likeness_utils.py  picture_quality_utils.py  picture_scoring.py  picture_stack_utils.py  picture_tagger.py  picture_utils.py  pixl_logging.py  quality_worker.py  server.py  startup_checks.py  tag_naturaliser.py  tag_worker.py  task_runner.py  utils.py  vault.py  work_planner.py  worker_registry.py
pixlvault/data/comfyui-workflows/built-in/: Flux2-Klein-Image-Edit.json  Upscale-2x-RealESRGAN.json
pixlvault/db_models/: __init__.py  character.py  chat.py  face.py  face_character_likeness.py  face_likeness.py  metadata.py  picture.py  picture_likeness.py  picture_set.py  quality.py  tag.py  user.py
pixlvault/image_plugins/: base.py  service.py
pixlvault/image_plugins/built-in/: blur_sharpen.py  brightness_contrast.py  colour_filter.py  plugin_template.py  scaling.py
pixlvault/routes/: characters.py  comfyui.py  config.py  picture_sets.py  pictures.py  tags.py
pixlvault/tasks/: __init__.py  base_task.py  base_task_finder.py  description_task.py  face_extraction_task.py  face_quality_task.py  feature_extraction_task.py  image_embedding_task.py  likeness_parameters_task.py  likeness_task.py  missing_description_finder.py  missing_face_extraction_finder.py  missing_face_quality_finder.py  missing_feature_extraction_finder.py  missing_image_embedding_finder.py  missing_likeness_finder.py  missing_likeness_parameters_finder.py  missing_quality_finder.py  missing_tag_finder.py  missing_tags_finder.py  missing_text_embedding_finder.py  missing_text_embeddings_finder.py  missing_watch_folder_import_finder.py  missing_watch_folder_imports_finder.py  quality_task.py  tag_task.py  text_embedding_task.py  watch_folder_import_task.py
pixlvault/utils/: __init__.py  picture_utils.py
pixlvault/utils/quality/: smart_score_utils.py
pixlvault/utils/service/: export_utils.py
scripts/: benchmark_tagger.py  expand_bounding_boxes.py  likeness_progress.py  reset_embeddings_and_likeness.py  reset_likeness_frontier.py  reset_tags_for_retag.py
tests/: conftest.py  test_backend_order_stability.py  test_chat_history.py  test_clip_text_embedding_similarity.py  test_face_extraction_speed.py  test_face_likeness_worker.py  test_facial_features_worker.py  test_florence.py  test_full_pipeline.py  test_likeness_worker.py  test_many_to_many_face_data.py  test_picture_plugins.py  test_picture_sets.py  test_picture_stack_utils.py  test_picture_stacking.py  test_picture_tagger.py  test_quality_worker.py  test_server.py  test_smart_score_consistency.py  test_tag_worker.py  test_vram_batch_budget.py  test_watch_folder_worker.py  test_work_planner.py
tests/regression/: semantic_search_cpu.json  semantic_search_gpu.json  semantic_search_latest.json
website/: index.html  install.html  pixlstash.css  upgrade.html
