[project]
name = "pixlvault"
version = "0.8.0"
description = "PixlVault Picture Database"
authors = [
    { name = "PixlVault" }
]
requires-python = ">=3.10"
dependencies = [
    "open_clip_torch",
    "fastapi",
    "uvicorn",
    "uvicorn[standard]",
    "setuptools",
    "wheel",
    "twine",
    "numpy",
    "pillow",
    "opencv-python",
    "scipy",
    "platformdirs",
    "tomli",
    "colorlog",
    "httpx",
    "python-multipart",
    "onnxruntime",
    "requests",
    "transformers<4.49",
    "torch",
    "torchvision",
    "insightface",
    "rapidfuzz",
    "tqdm",
    "einops",
    "sentence_transformers",
    "spacy",
    "pillow-heif",
    "sqlmodel",
    "alembic",
    "python-jose[cryptography]",
    "dotenv",
    "passlib",
    "bcrypt<4.0.0",
    "nvidia-ml-py",
    "piexif",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "psutil"
]
dev = [
    "ruff"
]

[project.scripts]
pixlvault-server = "pixlvault.app:main"

[build-system]
requires = ["setuptools>=42", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pixlvault*"]

[tool.setuptools.package-data]
pixlvault = [
    "alembic.ini",
    "frontend/dist/**/*",
    "migrations/*.py",
    "migrations/*.mako",
    "migrations/versions/*.py",
]
